<resources>
    <string name="app_name">Onshop</string>
    <string name="login_title">WelCome Back, Please Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reg_page_title">Create Your Account and Start Shopping Today!</string>
    <string name="textview">I have an account, </string>
    <string name="bg_login_description">login background image.</string>
    <string name="reg_page_desc">registration page background image</string>
    <string name="con_password">Confirm Password</string>
    <string name="new_product_title">New Product\n</string>
    <string name="save_all">Save All</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Price</string>
    <string name="product_discount">Discount</string>
    <string name="product_count">Product Count</string>
    <string name="add_image_video">Add product Image or Video\n</string>
    <string name="upload">Upload images and video</string>
    <string name="image_desc">Selected Product Image</string>
    <string name="remove_image_icon">Remove Image Icon</string>
    <string name="previous">Prev</string>
    <string name="next">Next</string>
    <string name="zero">0</string>
    <string name="float_zero">0.00</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="search">Search Product</string>
    <string name="user_profile_link">Icon to user Profile page</string>
    <string name="user_cart_link">Link To User Cart Page</string>
    <string name="track_order_link">Link To Track Orders Page.</string>
    <string name="cart_image_desc">Cart product image</string>
    <string name="add">Add quantity Icon</string>
    <string name="subtract">Minus the quantity of products.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="product_display">product display image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="welcome_back_please_login">WELCOME BACK,PLEASE LOGIN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="ksh_2300000">Ksh 2300000</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
    <string name="discount">Discount</string>
    <string name="product">Product Description</string>
    <string name="product_title">Product Title</string>
    <string name="order_now">Order Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="circle_des">Cirlce Icon for IMage selection</string>
    <string name="shop">Continue Shopping</string>
    <string name="coming">This Page is Coming Soon</string>
    <string name="inventory">Inventory</string>
    <string name="circle_desc">circle</string>
    <string name="get_started">Get Started</string>
    <string name="join_and_discover_the_best_style_naccording_to_your_passion">Join and discover the best style\naccording to your passion</string>
    <string name="find_your_nbest_style">Find Your\nBest Style</string>
    <string name="get_start">Get Started</string>
    <string name="find_your_nbest_styles">Find Your\nBest Style</string>
    <string name="ssdd">Join and discover the best style\naccording to your passion</string>
    <string name="get_starteds">Get Started</string>
    <string name="product_image">Image</string>
    <string name="landing_page_image">Landing Page Image</string>
    <string name="selector">selector</string>
    <string name="todo">TODO</string>
    <string name="inventory_prod">Products Inventory</string>

</resources>