<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cart_item_view"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:background="@color/whiteFade"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/cart_item_image"
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:contentDescription="@string/cart_image_desc" />

    <TextView
        android:id="@+id/cart_item_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/product_name"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/cart_minus_quantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/minus"
            android:textSize="26sp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/cart_item_quantity"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/no_border"
            android:inputType="number"
            android:text="@string/_4"
            android:autofillHints="none"
            android:padding="8dp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/cart_plus_quantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/plus"
            android:textSize="20sp"
            android:padding="8dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/cart_item_price"
        android:layout_width="95dp"
        android:layout_height="match_parent"
        android:text="@string/ksh_2300000"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:gravity="center" />

</LinearLayout>
