<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/reg_page_bg"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="181dp"
        android:fontFamily="serif-monospace"
        android:text="@string/reg_page_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:translationY="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.059"
        tools:targetApi="p" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="306dp"
        android:layout_height="47dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/border_shape"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="43dp" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="306dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_shape"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/reg_username"
        tools:layout_editor_absoluteX="43dp" />

    <EditText
        android:id="@+id/reg_confirm_password"
        android:layout_width="306dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_shape"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        tools:layout_editor_absoluteX="43dp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginTop="56dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password"
        tools:layout_editor_absoluteX="95dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/textview"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        tools:layout_editor_absoluteX="95dp" />
</androidx.constraintlayout.widget.ConstraintLayout>